monitoring/prometheus/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "prometheus.int.kyledev.co"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: prometheus-kube-prometheus-prometheus
          port: 9090
      matches:
        - path:
            type: PathPrefix
            value: /
